@@ -1891,4 +1891,18 @@ RETURN x0.name?
     assert(first.keys === Set("a", "b", "p"))
     assert(first("p").asInstanceOf[Path] == PathImpl(a, r, b))
   }
+
+  @Test def issue_446() {
+    val a = createNode()
+    val b = createNode()
+    val c = createNode()
+    val d = createNode()
+    relate(a,b, "age"->24)
+    relate(a,c, "age"->38)
+    relate(a,d, "age"->12)
+
+    val q = "start n=node(1) match n-[f]->() with n, max(f.age) as age match n-[f]->m where f.age = age return m"
+
+    assert( parseAndExecute(q).toList === List(Map("m"->c)))
+  }
 }
